JumpScript/tests/baselines/reference/variableDeclarationInStrictMode1.errors.txt
lib.d.jump(32,18): error TS2300: Duplicate identifier 'eval'.
tests/cases/compiler/variableDeclarationInStrictMode1.jump(2,5): error TS1100: Invalid use of 'eval' in strict mode.
tests/cases/compiler/variableDeclarationInStrictMode1.jump(2,5): error TS2300: Duplicate identifier 'eval'.


==== tests/cases/compiler/variableDeclarationInStrictMode1.jump (2 errors) ====
    "use strict";
    var eval;
        ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
        ~~~~
!!! error TS2300: Duplicate identifier 'eval'.